src/objects/Account_Details__c.object
<CustomObject>
    <fields>
        <fullName>PAYOFFAMOUNT__c</fullName>
        <label>Payoff Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POID__c</fullName>
        <label>POID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POSLIMIT__c</fullName>
        <label>POS Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRINCIPAL_BALANCE__c</fullName>
        <label>Principal Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRINCIPAL_PAST_DUE__c</fullName>
        <label>Principal Past Due</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PROMO_REPORT_CODE__c</fullName>
        <label>Promo Report Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROPERTY_ADDRESS__c</fullName>
        <label>Property Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOrd__c</fullName>
        <label>ParentOrd</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a self-relationship field used to link SubAccounts(recType) to the respective MembershipAccounts(recType)</description>
        <label>Parent Account</label>
        <referenceTo>Account_Details__c</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preference_Locator__c</fullName>
        <label>Preference Locator</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Map_Link__c</fullName>
        <formula>IF(ISBLANK(PROPERTY_ADDRESS__c) , &quot;&quot;, 
   HYPERLINK(&quot;https://maps.google.com/maps?q=&quot; &amp; 
              PROPERTY_ADDRESS__c  &amp; &apos;,+&apos; &amp; 
              Property_City__c  &amp; &apos;,+&apos; &amp; 
              Property_State__c  &amp; &apos;,+&apos; &amp; 
              Property_Zip__c,
      &quot;Click for Map&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Map Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <label>Property Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGDCHECKCOUNT__c</fullName>
        <label>RegD Check Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REGDTRANSFERCOUNT__c</fullName>
        <label>RegD Transfer Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REISSUECODE__c</fullName>
        <label>Reissue Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RESTRICTED_ACCESS__c</fullName>
        <externalId>true</externalId>
        <label>Restricted Access</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecTypeID__c</fullName>
        <label>RecTypeID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecType__c</fullName>
        <label>RecType</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Brand Code BC01=Chevron Federal Credit Union, BC02=Spectrum Credit Union</description>
        <label>Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Time__c</fullName>
        <label>Refresh Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Restricted_Access1__c</fullName>
        <formula>Text( RESTRICTED_ACCESS__c ) &amp; &apos; &apos; &amp; 
CASE( RESTRICTED_ACCESS__c , 
0, &apos;Normal&apos;, 
1, &apos;Restricted&apos;, 
2, &apos;Sensitive&apos;,
3, &apos;Employee&apos;,
4, &apos;Employee Family&apos;,
5, &apos;Employee Sensitive&apos;,
6, &apos;Employee Sensitive Family&apos;,
&apos;0 Normal&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restricted Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RtsDateTime__c</fullName>
        <label>RtsDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SERVICE_1__c</fullName>
        <label>Service: 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SERVICE_2__c</fullName>
        <label>Service: 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SERVICE_3__c</fullName>
        <label>Service: 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHARECODE__c</fullName>
        <label>Share Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATEMENT_MAIL_CODE__c</fullName>
        <label>Statement Mail Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATUSREASON__c</fullName>
        <label>Status Reason</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>Status</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecureEmailAddress__c</fullName>
        <description>Account level email address</description>
        <label>Secure Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service1__c</fullName>
        <formula>Text(SERVICE_1__c) &amp; &apos; &apos; &amp; 
CASE(SERVICE_1__c, 
0, &apos;&apos;, 
01, &apos;Transfer In (Make Payments To)&apos;, 
02, &apos;Transfer In To Closed End Loans From Cross Member&apos;, 
03, &apos;Transfer In, Transfer Out, Withdrawals&apos;, 
11, &apos;New Solutions Checking Conversion&apos;, 
12, &apos;MySavings Savings Account&apos;, 
13, &apos;Chevron West Credit Card Sweep Share&apos;, 
16, &apos;Promo 6 Month Cert&apos;, 
30, &apos;Transfer In, Transfer Out, Withdrawal, Bill Pay&apos;, 
80, &apos;Members With Bill Payer&apos;, 
20, &apos;Spectrum Non-Interest Heloc&apos;, 
21, &apos;Chevron West 2-10 Year Fully Amortizing&apos;, 
22, &apos;Chevron West 10 Year Fully Amortizing&apos;, 
23, &apos;Chevron West 96 Month Fully Amortizing&apos;, 
40, &apos;GAP&apos;, 
41, &apos;MBI&apos;, 
42, &apos;HMO4CARS&apos;, 
43, &apos;GAP &amp; MBI&apos;, 
44, &apos;GAP &amp; HMO4CARS&apos;, 
45, &apos;MBI &amp; HMO4CARS&apos;, 
46, &apos;GAP/HMO4CARS/MBI&apos;, 
50, &apos;3% + Share Rate&apos;, 
51, &apos;4% + Share Rate&apos;, 
52, &apos;7% + Share Rate&apos;, 
94, &apos;Member Opt-Out Of Credit Limit Increase!&apos;, 
95, &apos;Fixed Payment Service Code&apos;, 
96, &apos;Waive Annual Fee&apos;, 
97, &apos;Close Loan At End Of Cycle&apos;, 
98, &apos;Waive Late Fee&apos;, 
99, &apos;Waive Overlimit Fee&apos;, 
&apos;&apos;)</formula>
        <label>Service: 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service2__c</fullName>
        <formula>Text(SERVICE_2__c) &amp; &apos; &apos; &amp; 
CASE(SERVICE_2__c, 
0, &apos;&apos;, 
01, &apos;Transfer In (Make Payments To)&apos;, 
02, &apos;Transfer In To Closed End Loans From Cross Member&apos;, 
03, &apos;Transfer In, Transfer Out, Withdrawals&apos;, 
11, &apos;New Solutions Checking Conversion&apos;, 
12, &apos;MySavings Savings Account&apos;, 
13, &apos;Chevron West Credit Card Sweep Share&apos;, 
16, &apos;Promo 6 Month Cert&apos;, 
30, &apos;Transfer In, Transfer Out, Withdrawal, Bill Pay&apos;, 
80, &apos;Members With Bill Payer&apos;, 
20, &apos;Spectrum Non-Interest Heloc&apos;, 
21, &apos;Chevron West 2-10 Year Fully Amortizing&apos;, 
22, &apos;Chevron West 10 Year Fully Amortizing&apos;, 
23, &apos;Chevron West 96 Month Fully Amortizing&apos;, 
40, &apos;GAP&apos;, 
41, &apos;MBI&apos;, 
42, &apos;HMO4CARS&apos;, 
43, &apos;GAP &amp; MBI&apos;, 
44, &apos;GAP &amp; HMO4CARS&apos;, 
45, &apos;MBI &amp; HMO4CARS&apos;, 
46, &apos;GAP/HMO4CARS/MBI&apos;, 
50, &apos;3% + Share Rate&apos;, 
51, &apos;4% + Share Rate&apos;, 
52, &apos;7% + Share Rate&apos;, 
94, &apos;Member Opt-Out Of Credit Limit Increase!&apos;, 
95, &apos;Fixed Payment Service Code&apos;, 
96, &apos;Waive Annual Fee&apos;, 
97, &apos;Close Loan At End Of Cycle&apos;, 
98, &apos;Waive Late Fee&apos;, 
99, &apos;Waive Overlimit Fee&apos;, 
&apos;&apos;)</formula>
        <label>Service: 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service3__c</fullName>
        <formula>Text(SERVICE_3__c) &amp; &apos; &apos; &amp; 
CASE(SERVICE_3__c, 
0, &apos;&apos;, 
01, &apos;Transfer In (Make Payments To)&apos;, 
02, &apos;Transfer In To Closed End Loans From Cross Member&apos;, 
03, &apos;Transfer In, Transfer Out, Withdrawals&apos;, 
11, &apos;New Solutions Checking Conversion&apos;, 
12, &apos;MySavings Savings Account&apos;, 
13, &apos;Chevron West Credit Card Sweep Share&apos;, 
16, &apos;Promo 6 Month Cert&apos;, 
30, &apos;Transfer In, Transfer Out, Withdrawal, Bill Pay&apos;, 
80, &apos;Members With Bill Payer&apos;, 
20, &apos;Spectrum Non-Interest Heloc&apos;, 
21, &apos;Chevron West 2-10 Year Fully Amortizing&apos;, 
22, &apos;Chevron West 10 Year Fully Amortizing&apos;, 
23, &apos;Chevron West 96 Month Fully Amortizing&apos;, 
40, &apos;GAP&apos;, 
41, &apos;MBI&apos;, 
42, &apos;HMO4CARS&apos;, 
43, &apos;GAP &amp; MBI&apos;, 
44, &apos;GAP &amp; HMO4CARS&apos;, 
45, &apos;MBI &amp; HMO4CARS&apos;, 
46, &apos;GAP/HMO4CARS/MBI&apos;, 
50, &apos;3% + Share Rate&apos;, 
51, &apos;4% + Share Rate&apos;, 
52, &apos;7% + Share Rate&apos;, 
94, &apos;Member Opt-Out Of Credit Limit Increase!&apos;, 
95, &apos;Fixed Payment Service Code&apos;, 
96, &apos;Waive Annual Fee&apos;, 
97, &apos;Close Loan At End Of Cycle&apos;, 
98, &apos;Waive Late Fee&apos;, 
99, &apos;Waive Overlimit Fee&apos;, 
&apos;&apos;)</formula>
        <label>Service: 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Mail_Translate__c</fullName>
        <description>Concatenate SMC, &quot;-&quot;, CUStatementMailcodeDescription</description>
        <label>Statement Mail Code</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status1__c</fullName>
        <formula>Text(STATUS__c) &amp; &apos; &apos; &amp; 
CASE(STATUS__c, 
0.00, &apos;Not Issued&apos;, 
1.00, &apos;Issued&apos;, 
2.00, &apos;Capture&apos;, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <formula>CASE(STATUSREASON__c, 
0, &apos;000 Retain-No Reason Specified&apos;, 
1, &apos;001 Retain-Lost&apos;,
2, &apos;002 Retain-Stolen&apos;,
3, &apos;003 Retain-Fraud&apos;, 
4, &apos;004 Retain-Permanent Restraint&apos;,
5, &apos;005 Retain-Bad Debt&apos;,
6, &apos;006 Retain-Checking Dormant&apos;, 
7, &apos;007 Retain-Checking Closed&apos;,
8, &apos;008 Retain-Checking NSF&apos;,
9, &apos;009 Retain-Bankruptcy&apos;, 
10, &apos;010 Retain-Marital Problems&apos;,
11, &apos;011 Retain-Deceased&apos;,
12, &apos;012 Retain-Collection&apos;, 
13, &apos;013 Retain-Collection (Skip)&apos;,
14, &apos;014 Retain-Collection (Legal Pursuit)&apos;,
15, &apos;015 Retain-Closed for Cause&apos;,
16, &apos;016 Retain-Closed per Cardholder&apos;,
17, &apos;017 Retain-Closed (Duplicate)&apos;, 
18, &apos;018 Retain-Chargeoff&apos;,
19, &apos;019 Retain-Excessive PIN Retries&apos;,
20, &apos;020 Retain-Requested by Network&apos;, 
100, &apos;100 Return-No Reason Specified&apos;,
101, &apos;101 Return-Lost&apos;,
102, &apos;102 Return-Stolen&apos;,
103, &apos;103 Return-Fraud&apos;,
104, &apos;104 Return-Permanent Restraint&apos;,
105, &apos;105 Return-Bad Debt&apos;,
106, &apos;106 Return-Checking Dormant&apos;,
107, &apos;107 Return-Checking Closed&apos;,
108, &apos;108 Return-Checking NSF&apos;,
109, &apos;109 Return-Bankruptcy&apos;,
110, &apos;110 Return-Marital Problems&apos;,
111, &apos;111 Return-Deceased&apos;,
112, &apos;112 Return-Collection&apos;,
113, &apos;113 Return-Collection (Skip)&apos;,
114, &apos;114 Return-Collection (Legal Pursuit)&apos;,
115, &apos;115 Return-Closed for Cause&apos;,
116, &apos;116 Return-Closed per Cardholder&apos;,
117, &apos;117 Return-Closed (Duplicate)&apos;,
118, &apos;118 Return-Chargeoff&apos;,
119, &apos;119 Return-Excessive PIN Retries&apos;,
120, &apos;120 Return-Requested by Network&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TERMFREQUENCY__c</fullName>
        <label>Term Frequency</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TERMPERIOD__c</fullName>
        <label>Term Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trigger_Time_15__c</fullName>
        <formula>Refresh_Time__c - 0.038</formula>
        <label>Trigger Time 15</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TypeTranslate__c</fullName>
        <label>Account Type / Share Type</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Account_Number__c</fullName>
        <description>Unique/External key used to represent a Unique Account Number. It will always be a hidden field used to make sure all the Account Numbers are unique.</description>
        <externalId>true</externalId>
        <label>Unique Account Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC12_Make__c</fullName>
        <label>Vehicle Title UC12 Make</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC12_Model__c</fullName>
        <label>Vehicle Title UC12 Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC12_VIN__c</fullName>
        <label>Vehicle Title UC12 VIN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC12_Year__c</fullName>
        <label>Vehicle Title UC12 Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC14_VIN__c</fullName>
        <label>Vehicle Title UC14 VIN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC14_YrMkMdl__c</fullName>
        <label>Vehicle Title UC14 YrMkMdl</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC16_VIN__c</fullName>
        <label>Vehicle Title UC16 VIN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC16_YrMkMdl__c</fullName>
        <label>Vehicle Title UC16 YrMkMdl</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC18_YrMkMdl__c</fullName>
        <label>Vehicle Title UC18 YrMkMdl</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC4_Make__c</fullName>
        <label>Vehicle Title UC4 Make</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC4_Model__c</fullName>
        <label>Vehicle Title UC4 Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC4_Year__c</fullName>
        <label>Vehicle Title UC4 Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC8_Make__c</fullName>
        <label>Vehicle Title UC8 Make</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC8_Model__c</fullName>
        <label>Vehicle Title UC8 Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Title_UC8_Year__c</fullName>
        <label>Vehicle Title UC8 Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W8_BEN_EXPIRATION_DATE__c</fullName>
        <label>W8-BEN Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W8_BEN_ON_FILE__c</fullName>
        <label>W8-BEN On File</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARNING_01_CODE__c</fullName>
        <label>Warning 01 Code</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARNING_02_CODE__c</fullName>
        <label>Warning 02 Code</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARNING_03_CODE__c</fullName>
        <label>Warning 03 Code</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temp__c</fullName>
        <label>temp</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Member Account</label>
    <listViews>
        <fullName>ATM_Debit_Cards</fullName>
        <columns>NAME</columns>
        <columns>Card_Name__c</columns>
        <columns>Emp_Card_Number__c</columns>
        <columns>TypeTranslate__c</columns>
        <columns>AuthLimit__c</columns>
        <columns>Brand__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecType__c</field>
            <operation>equals</operation>
            <value>CARD</value>
        </filters>
        <label>CU ATM/Debit Cards</label>
    </listViews>
    <listViews>
        <fullName>All_Account_Records</fullName>
        <columns>NAME</columns>
        <columns>TypeTranslate__c</columns>
        <columns>RecType__c</columns>
        <columns>RecTypeID__c</columns>
        <columns>Emp_Card_Number__c</columns>
        <columns>Brand__c</columns>
        <columns>Current_Branch__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Account Records</label>
    </listViews>
    <listViews>
        <fullName>All_Mortgage_Records</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>PROPERTY_ADDRESS__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_State__c</columns>
        <columns>Property_Zip__c</columns>
        <columns>Loan_Number__c</columns>
        <columns>OPEN_DATE__c</columns>
        <columns>Maturity_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecType__c</field>
            <operation>equals</operation>
            <value>MORT</value>
        </filters>
        <label>CU Mortgage Records</label>
    </listViews>
    <listViews>
        <fullName>All_Trust_Records</fullName>
        <columns>NAME</columns>
        <columns>TypeTranslate__c</columns>
        <columns>RecType__c</columns>
        <columns>Balance__c</columns>
        <columns>Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TypeTranslate__c</field>
            <operation>contains</operation>
            <value>Trust</value>
        </filters>
        <label>CU Trust Records</label>
    </listViews>
    <listViews>
        <fullName>CU_Membership_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>TypeTranslate__c</columns>
        <columns>OPEN_DATE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecType__c</field>
            <operation>equals</operation>
            <value>ACCT</value>
        </filters>
        <label>CU Membership Accounts</label>
    </listViews>
    <listViews>
        <fullName>CU_Shares</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>TypeTranslate__c</columns>
        <columns>OPEN_DATE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecType__c</field>
            <operation>equals</operation>
            <value>SHAR</value>
        </filters>
        <label>CU Shares</label>
    </listViews>
    <listViews>
        <fullName>CU_Student_Loans</fullName>
        <columns>NAME</columns>
        <columns>TypeTranslate__c</columns>
        <columns>OPEN_DATE__c</columns>
        <columns>Last_Payment_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecType__c</field>
            <operation>equals</operation>
            <value>STDL</value>
        </filters>
        <label>CU Student Loans</label>
    </listViews>
    <listViews>
        <fullName>Secure_Email</fullName>
        <columns>NAME</columns>
        <columns>TypeTranslate__c</columns>
        <columns>Brand__c</columns>
        <columns>RecType__c</columns>
        <columns>SecureEmailAddress__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SecureEmailAddress__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Secure Email</label>
    </listViews>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Account</pluralLabel>
    <recordTypes>
        <fullName>Card</fullName>
        <active>true</active>
        <description>This record type will be used to store all the CARD Information</description>
        <label>Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan</fullName>
        <active>true</active>
        <description>This record type will be used to store all the LOAN Information</description>
        <label>Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <description>This record type will be used to store all the Membership Accounts</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mortgage</fullName>
        <active>true</active>
        <description>This record type will be used to store all the Mortgage Information</description>
        <label>Mortgage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Share</fullName>
        <active>true</active>
        <description>This record type will be used to store all the SHARE Information</description>
        <label>Share</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student_Loan</fullName>
        <active>true</active>
        <description>This record type will be used to store all the Student Loan Information</description>
        <label>Student Loan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>